examples/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: http-server
  name: http-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - image: katacoda/docker-http-server
        imagePullPolicy: Always
        name: http-server
        ports:
        - containerPort: 80
