examples/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-server
  name: http-server
  namespace: default
spec:
  clusterIP: 10.96.178.251
  ports:
  - name: default
    port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 32000
  selector:
    app: http-server
  type: NodePort
